--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -13,7 +13,9 @@ using HTML or markdown.  Do not modify this file above this line -->
   <h1>Brenda Marie Osbey</h1>
  <p>Brenda Marie Osbey is a poet, theorist, orator, historiographer, and translator who has published several books of poems, including <i>Desperate Circumstance, Dangerous Woman</i>, <i>History and Other Poems</i>, and <i>All Souls: Essential Poems</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “&#91;Osbey’s&#93; selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<a href="#fn1"><sup>[1]</sup></a> Living among the vibrant fragments of centuries-old traditions, Osbey collects and distills the voices of the dead embedded in location and legacy.</p>
  <br>
-<p>She focuses her historical reclamation through her characters’ forces of imagination. Comparing history to a cloth, Osbey notes that "very often what I am doing is I'm looking at that cloth... and turn[ing] the cloth over and look[ing] at the underside so that you see the knots and the potential errors and the things that are hidden, the things that are not supposed to be seen."<a href="#fn2"><sup>[2]</sup></a> Osbey disrupts conventional poetic forms in order to break with the false history designed by white settlers.  According to the critic Laura Vrana, the themes of Osbey’s poems, as well as the sometimes experimental forms which she uses in storytelling, draw from the forms of the <i>griot</i> oral tradition.<a href="#fn3"><sup>[3]</sup></a> Working with the past as a presence embedded in historical location, she also explores the way the dead can speak to the living, and the enduring links between their realms. Osbey has been influenced by Robert Hayden, Gayl Jones, and Sherley Anne Williams, among others.</p>
+<p>In her first book, <i> Ceremony for Minneconjoux</i>, Osbey explores themes of seduction, "madness" as a form of resistance, and "how the legacy of strength and endurance is transmitted among the [women]"<a href="#fn2"><sup>[2]</sup></a>. Comparing history to a cloth, Osbey notes that "very often what I am doing is I'm looking at that cloth... and turn[ing] the cloth over and look[ing] at the underside so that you see the knots and the potential errors and the things that are hidden, the things that are not supposed to be seen."<a href="#fn3"><sup>[3]</sup></a> Osbey disrupts conventional poetic forms in order to break with the false history designed by white settlers. In <i> History and Other Poems</i>, she uncovers the crimes against humanity committed by Christoper Columbus and Diogo cão, among other colonial agents. Juxtaposing historical accounts with contemporary lyrics and company slogans, Osbey exposes the afterlives of the Transatlantic slave trade.</p>
+<p>According to the critic Laura Vrana, the themes of Osbey’s poems, as well as the experimental forms which she uses in storytelling, draw from the forms of the <i>griot</i> oral tradition.<a href="#fn4"><sup>[4]</sup></a> Working with the past as a presence embedded in historical location, she also explores the way the dead can speak to the living, and the enduring links between their realms. In her American Book Award winning collection, <i>All Saints</i>, she blends tradition, myth, and legend into a deep reverence for and celebration of the dead.</p>
+<p>Osbey's historical narrative poems have been influenced by Robert Hayden, Gayl Jones, and Sherley Anne Williams, among others.</p>
 <hr/>
   <p>In this interview with Carmen Gillespie, Osbey discusses the omnipresence of history, the process of reclaiming images through her poetry, the profound ways in which Black Americans have transformed and redefined colonial languages through artistic tradition, expression, and resistance, as well as the beauty, complexity, and unique temporality of New Orleanian culture.
   <p><a href="https://cavecanempoets.org/poetstour/carmen-gillespie">Carmen Gillespie</a>, a critic, poet, and educator, received her Bachelor's degree and Master's from JMU-- where she studied with Dr. Joanne Gabbin, the founder of the Furious Flower Poetry Center. She received her Ph.D in Comparative Literature from Emory University, and continued to become a professor of English and the director and founder of the Griot Institute for Africana Studies at Bucknell University. She published three award-winning books of poetry, critical collections on Alice Walker and Toni Morrison, and received several prestigious fellowships for her writing.</p>
@@ -26,18 +28,19 @@ using HTML or markdown.  Do not modify this file above this line -->
 <ul><li><p><a href="https://poetrysociety.org/features/remembering-katrina/brenda-marie-osbey">"Litany of Our Lady"</a>, a meditation on Katrina. Includes a short essay on Brenda Marie Osbey's experience of hurricane Katrina.</p></li></ul>
 <ul><li><p><a href="https://poets.org/poem/contemplating-breasts-pauline-lumumba">"On Contemplating the Breasts of Pauline Lumumba"</a>, an account of a famous protest led by the Congolese womanist and activist.</p></li></ul>
 <b>Essays:</b>
-<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a>, by Brenda Marie Osbey.<a href="#fn4"><sup>[4]</sup></a> An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
-<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a>, by Brenda Marie Osbey.<a href="#fn5"><sup>[5]</sup></a> Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/20077905">"Writing Home"</a>, by Brenda Marie Osbey.<a href="#fn5"><sup>[5]</sup></a> An autobiographical essay on Osbey's formative encounters with bookstores, maps, school, history, writing, and more.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/23208853">"Why We Can't Talk to You about Voodoo"</a>, by Brenda Marie Osbey.<a href="#fn6"><sup>[6]</sup></a> Addresses misconceptions of Voodoo, and provides some historical background.</p></li></ul>
 <ul><li><p><a href="https://fightandfiddle.com/2021/01/31/osbey-essay">"An Obligation to Honor: Brenda Marie Osbey in the Round"</a>: An essay by Deborah McDowell, Ph.D. Includes a celebration and analysis of Osbey's poetry collection, <i>All Saints</i>, along with excerpts from the book.</p></li></ul>
 <b>Other:</b>
 <ul><li><p><a href="https://www.osbeynola.com/">Brenda Marie Osbey's</a> website.</p></li></ul>
 
 <hr>
 <p><a name="fn1">[1]</a>: Davis, Thadious M. <i>Southscapes: Geographies of Race, Region, & Literature.</i> Chapel Hill: The University of North Carolina Press, 2011.</p>
-<p><a name="fn2">[2]</a>:OneBook OneNewOrleans. "Crossroads: Intersections of History and Creative Writing." YouTube Video, 1:02:09. November 20, 2021. https://youtu.be/7dlSvPEALq0.</p>
-<p><a name="fn3">[3]</a>: Vrana, Laura. "On Brenda Marie Osbey, 'whom we have every right to love.'" <i>Summoning Our Saints: The Poetry and Prose of Brenda Marie Osbey</i> (Lexington Books, 2019). The Langston Hughes Review 262. (2020): 203-215. 
-<p><a name="fn4">[4]</a>: Osbey, Brenda Marie. “Writing Home.” <i>The Southern Literary Journal</i> 40, no. 2 (2008): 19–41.</p>
-<p><a name="fn5">[5]</a>: Osbey, Brenda Marie. “Why We Can’t Talk to You about Voodoo.” <i>The Southern Literary Journal</i> 43, no. 2 (2011): 1–11.</p>
+<p><a name="fn2">[2]</a>: Jacqueline Brice-Finch. “Brenda Marie Osbey.” <i>Dictionary of Literary Biography, Vol. 120: American Poets Since World War II, Third Series</i>. Detroit:Gale Research, 1996.</p>
+<p><a name="fn3">[3]</a>:OneBook OneNewOrleans. "Crossroads: Intersections of History and Creative Writing." YouTube Video, 1:02:09. November 20, 2021. https://youtu.be/7dlSvPEALq0.</p>
+<p><a name="fn4">[4]</a>: Vrana, Laura. "On Brenda Marie Osbey, 'whom we have every right to love.'" <i>Summoning Our Saints: The Poetry and Prose of Brenda Marie Osbey</i> (Lexington Books, 2019). The Langston Hughes Review 262. (2020): 203-215. 
+<p><a name="fn5">[5]</a>: Osbey, Brenda Marie. “Writing Home.” <i>The Southern Literary Journal</i> 40, no. 2 (2008): 19–41.</p>
+<p><a name="fn6">[6]</a>: Osbey, Brenda Marie. “Why We Can’t Talk to You about Voodoo.” <i>The Southern Literary Journal</i> 43, no. 2 (2011): 1–11.</p>
 <hr>
 <h3>Preferred Citation:</h3>
 <i>Brenda Marie Osbey Interview, 9/24/2004 (FF0148)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF0148. Collection finding aid: https://aspace.lib.jmu.edu/repositories/4/resources/487.
