--- a/pages/ff152.md
+++ b/pages/ff152.md
@@ -16,7 +16,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p>In works such as <i>The Venus Hottentot</i>, she recovers the undertold histories and silenced voices of the past, and delves into the gaps and silences of the archive. As she notes in <i>The Black Interior</i>, “The historian laments caesuras in the historical record; the artist can offer deeply informed imagining that, while not empirically verifiable, offers one of the only routes we may have to imagine a past whose records have not been kept precious.”<a href="#fn1"><sup>[1]</sup></a> 
   <p>In her collection, <i>Antebellum Dream Book</i>, as Dr. Alexander notes, she explores how "Race, gender, class, sexuality– our social identities– exist and have been 'always already' constructed in the dream space... Yet social identity, in unfettered dream space, need not be seen as a constraint but rather as a way of imagining the racial self unfettered, racialized but not delimited."<a href="#fn2"><sup>[2]</sup></a> The forms of her poems range from sonnets, to surrealist free verse, to counter-narrative epics such as "Amistad".</p>
 <p>In her essay collection, <i>The Black Interior</i>, the powerful economy of her language combines with her vivid imagery to explore an "inner space in which black artists have found selves that go far, far beyond the limited expectations and definitions of what black is, isn't, or should be."<a href="#fn3"><sup>[3]</sup></a> Within these works Dr. Alexander often juxtaposes African American literature and popular culture, adopting a nuanced and inspired position on their interaction.</p>
-<p>Dr. Alexander has been influenced by Rita Dove, Elizabeth Bishop, and Gwendolyn Brooks, and has deeply influenced many poets in turn.</p>
+<p>Dr. Alexander has been influenced by Rita Dove, Elizabeth Bishop, and Gwendolyn Brooks, among others. In her role as an instructor and mentor in universities and the <a href="https://cavecanempoets.org/">Cave Canem Foundation</a>, and in her role as poet and storyteller, she has deeply influenced many poets in turn.</p>
 <hr>
 <p>In this interview, Meta DuEwa Jones interviews Elizabeth Alexander, touching on the themes of myth, history, colonialism, and visuality in her work. She also discusses her need for strong self-advocacy when dealing with publishing presses, the aesthetic and ideological motives behind her book covers, and her process and philosophy for writing.</p>
 <p><a href="https://englishcomplit.unc.edu/faculty-directory/meta-duewa-jones"> Dr. Meta DuEwa Jones</a> is a professor at UNC Chapel Hill, and a prolific theorist. She received her Ph.D. from Stanford in 2001. She has had papers published in <i>MELUS</i>, <i>Callaloo</i>, and <i>ELH</i>, among other journals. She has been included in several essay collections, and has published a book, <i>The Muse is Music</i>. Her scholarship often works at the intersection of African American literature, music, and visual art.</p>
