--- a/pages/ff143.md
+++ b/pages/ff143.md
@@ -21,18 +21,18 @@ using HTML or markdown.  Do not modify this file above this line -->
 <hr>
 <h3>More information:</h3>
 <b>Interviews:</b>
-<ul><li><p><a href=”https://www.jstor.org/stable/26446152”>Interview</a>  with Susan Kelly. Sonya discusses the literary culture of Harlem in the ‘60s, her involvement with the Nation of Islam, how she conducted the first college course on African American Women’s Literature, and what it took to resist and combat the attempts to erase the historical events, Black poetry, literature, and political philosophy in the ‘60s, ‘70s, and beyond.</p></li></ul>
-<ul><li><p><a href=”https://bostonreview.net/articles/sonia-sanchez-christina-knight-straight-down-bones”>Interview</a> with Christina Knight. Discuss Sanchez’s ancestral influences, Sanchez confronting racism in academia, the job market, and the libraries in her time as a student.</p></li></ul>
-<ul><li><p><a href=”https://www.jstor.org/stable/40545827”>Interview</a> with India Dennis-Mahmood. Sanchez and Dennis-Mahmood touch on the history of these feminisms, the struggles and influence of Black students on predominantly white campuses, and how modernism isn’t honest about its origins in the art of the African Diaspora.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/26446152">Interview</a>  with Susan Kelly. Sonya discusses the literary culture of Harlem in the ‘60s, her involvement with the Nation of Islam, how she conducted the first college course on African American Women’s Literature, and what it took to resist and combat the attempts to erase the historical events, Black poetry, literature, and political philosophy in the ‘60s, ‘70s, and beyond.</p></li></ul>
+<ul><li><p><a href="https://bostonreview.net/articles/sonia-sanchez-christina-knight-straight-down-bones">Interview</a> with Christina Knight. Discuss Sanchez’s ancestral influences, Sanchez confronting racism in academia, the job market, and the libraries in her time as a student.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/40545827">Interview</a> with India Dennis-Mahmood. Sanchez and Dennis-Mahmood touch on the history of these feminisms, the struggles and influence of Black students on predominantly white campuses, and how modernism isn’t honest about its origins in the art of the African Diaspora.</p></li></ul>
 <b>Essays:</b>
-<ul><li><p><a href=”https://www.jstor.org/stable/41067138”>”The Poet as a Creator of Social Values”</a>: Essay written by Sanchez in the ‘80s. She discusses the history of poetic language from its early forms to its racist distortion by white settlers, to the resistance and reclamation poets in the African Diaspora have effected.</p></li></ul>  
-<ul><li><p><a href=”https://www.jstor.org/stable/j.ctt130hrvp.8”>”Sonia Sanchez: The Will and the Spirit”</a>: Essay on Sanchez’s work, and an interview with D.H. Melhem covering Sanchez’s childhood practice of poetry writing, her musical influences, and the performance of poems.</p></li></ul>
-<ul><li><p><a href=”https://www.jstor.org/stable/24350370”>”Black Magic Woman: Sonia Sanchez and her Work”</a>: Essay from the early ‘70s discussing the multiple directions that Sanchez’s impact on the Black Arts Movement were taking. Contains several excerpts of Sanchez’s contemporary poems, with analysis.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/41067138">”The Poet as a Creator of Social Values”</a>: Essay written by Sanchez in the ‘80s. She discusses the history of poetic language from its early forms to its racist distortion by white settlers, to the resistance and reclamation poets in the African Diaspora have effected.</p></li></ul>  
+<ul><li><p><a href="https://www.jstor.org/stable/j.ctt130hrvp.8">”Sonia Sanchez: The Will and the Spirit”</a>: Essay on Sanchez’s work, and an interview with D.H. Melhem covering Sanchez’s childhood practice of poetry writing, her musical influences, and the performance of poems.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/24350370">”Black Magic Woman: Sonia Sanchez and her Work”</a>: Essay from the early ‘70s discussing the multiple directions that Sanchez’s impact on the Black Arts Movement were taking. Contains several excerpts of Sanchez’s contemporary poems, with analysis.</p></li></ul>
 <b>Poems and readings:</b>
-<ul><li><p><a href=”https://poets.org/poet/sonia-sanchez”>Selection</a> includes several haikus, among other poems.</p></li></ul>
-<ul><li><p><a href=”https://www.afropoets.net/soniasanchez.html”>Selection</a> contains an excellent tracing of Sanchez’s style as it transforms across her publications. Also includes selected poems.</p></li></ul>
+<ul><li><p><a href="https://poets.org/poet/sonia-sanchez">Selection</a> includes several haikus, among other poems.</p></li></ul>
+<ul><li><p><a href="https://www.afropoets.net/soniasanchez.html">Selection</a> contains an excellent tracing of Sanchez’s style as it transforms across her publications. Also includes selected poems.</p></li></ul>
 <b>Other:</b>
-<ul><li><p><a href=”https://soniasanchez.net/bio”>Sanchez’s website</a> including biographical info, books and CDs, and contact information.</p></li></ul>
+<ul><li><p><a href="https://soniasanchez.net/bio">Sanchez’s website</a> including biographical info, books and CDs, and contact information.</p></li></ul>
 <hr>
 <p><a name="fn1">[1]</a>:Gaither, Larvester. "Part II - Interview with Sonia Sanchez." <i>The Gaither Reporter</i> 3, no. 6 (Jul 30, 1996): 49.</p>
 <p><a name="fn2">[2]</a>:Gabbin, Joanne Veal. "The Southern Imagination of Sonia Sanchez." In <i>Southern Women Writers: The New Generation</i>, edited by Tonette Bond Inge, 180-202. The University of Alabama Press, 1990.</p>
