--- a/pages/ff146.md
+++ b/pages/ff146.md
@@ -10,6 +10,32 @@ external_manifest_url:
 using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
 <hr>
+<p style="text-align:center"><img src="https://www.sampsoniaway.org/wp-content/uploads/2014/08/Kwame.png"></p>
+<h1 style="text-align:center">Kwame Dawes</h1>
+<p>Kwame Dawes is a prolific poet, teacher, editor, documentarian, and organizer that works closely with local communities. He has published twenty books of poetry to date, including <i>Progeny of Air</i>, <i>Gomer’s Song</i>, and <i>Duppy Conqueror: New and Selected Poems</i>. He has also received several awards for his work, including the Pushcart Prize for his poem, <i>Inheritance</i>, and an Emmy for a website based on his project <i>HOPE: Living and Loving with AIDS in Jamaica</i>.</p>
+<p>Born in Ghana, and spending most of his childhood in Jamaica, Dawes works at the intersection of the various facets of his identity, calling on his memory of the various places he calls home. As he notes, "I have always lived with this sense of being inside and outside of various worlds… at once, inside and yet still able to look from outside inside."<a href="#fn1"><sup>[1]</sup></a> In his wide panoply of work, Dawes weaves themes of nature, community, colonial counter-narrative, Reggae, memory, and dreams together in his rich landscapes, portraits, and stories.</p>
+<hr>
+<p>In this interview with Tyehimba Jess, Dawes discusses his experience of early reggae in 1970s Jamaica, how the political landscapes he grew up with shaped his thinking and identity, the underrepresentation of Black writers and poets in the publishing industry, how he has overcome and worked to change the industry, and his passion for teaching and organizing writing communities.</p>
+<p><a href="http://www.tyehimbajess.net/index.html">Tyehimba Jess</a> is an Alumni of Cave Canem and NYU, working at the intersection of slam and academic poetry. His published books include <i>Lead Belly</i> and <i>Olio</i>, which won the 2017 Pulitzer Prize, among other awards. He currently serves as a Professor of English at the College of Staten Island.</p>
+<hr>
+<h3>More Information</h3>
+<b>Interviews:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/44489257">Interview</a> with Walter P. Collins, III. Tells the story of Dawes’ family, situating it within the historical and political landscape of mid-20th century Jamaica and Ghana. Also touches on the forms he works with, and his writing process.</p></li></ul>
+
+<b>Essays:</b>
+<ul><li><p><a href="https://www.jstor.org/stable/3042464">"Learning to Speak: The New Age of HIV / AIDS in the Other Jamaica"</a>: Essay, with photographs, concerning the history of the AIDS virus in Jamaica, the lived experience of those living with it, and some of the medical and emotional strategies of resistance that have formed.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/26237308
+">"Meeting at the Crossroads: Mapping Worlds and World Literature"</a>: Considers the multiple meanings and symbols connected to the crossroads, and uses it as a metaphor to reimagine comparative literature.</p></li></ul>
+<ul><li><p><a href="https://www.jstor.org/stable/43487759">"An Apologia for Caribbean Publishing"</a>: Dawes calls for more independent publishing houses and editors within the Caribbean, emphasizing the importance of independent presses to knowledge preservation and the growth of cultural capital.</p></li></ul>
+<b>Poems:</b>
+<ul><li><p><a href="https://pionline.wordpress.com/2016/06/25/kwame-dawes-an-archive-of-online-poems">Selection</a> containing over 80 poems chosen from Dawes’ publications, including several from his multimedia collaboration <i>Ashes</i>.</p></li></ul>
+<ul><li><p><a href="https://poets.org/poet/kwame-dawes">Selection</a> of Dawes’ more recent poems.</p></li></ul>
+<b>Other:</b>
+<ul><li><p><a href="http://kwamedawes.com/about/">Kwame Dawes’</a> professional website. Contains an extensive biography, links to books and poems, descriptions of Dawes’ celebrated multimedia collaborations, and contact information.</p></li></ul>
+<ul><li><p><a href="https://youtu.be/-8PTePprTWQ">Video Lecture</a> by Kwame Dawes and a conversation at the Library of Congress.
+<hr>
+<p><a name="fn1">[1]</a>:Dawes, Kwame Senu Neville, and Walter P. Collins. "Kwame Dawes: An Interview with Walter P. Collins, III." <i>Obsidian</i> 8, no. 2 (2007): 38–52.</p>
+
 <h3>Preferred Citation:</h3>
 <i>Kwame Dawes Interview, 9/25/2004 (FF146)</i>. Transcribed and edited by Evan Sizemore, 2021, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF146. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
 <hr>
