--- a/pages/ff146.md
+++ b/pages/ff146.md
@@ -16,7 +16,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p>Born in Ghana, and spending most of his childhood in Jamaica, Dawes works at the intersection of the various facets of his identity, calling on his memory of the various places he calls home. As he notes, "I have always lived with this sense of being inside and outside of various worlds… at once, inside and yet still able to look from outside inside."<a href="#fn1"><sup>[1]</sup></a> In his wide panoply of work, Dawes weaves themes of nature, community, colonial counter-narrative, Reggae, memory, and dreams together in his rich landscapes, portraits, and stories.</p>
 <hr>
 <p>In this interview with Tyehimba Jess, Dawes discusses his experience of early reggae in 1970s Jamaica, how the political landscapes he grew up with shaped his thinking and identity, the underrepresentation of Black writers and poets in the publishing industry, how he has overcome and worked to change the industry, and his passion for teaching and organizing writing communities.</p>
-<p><a href="http://www.tyehimbajess.net/index.html">Tyehimba Jess</a> is an Alumni of Cave Canem and NYU, working at the intersection of slam and academic poetry. His published books include <i>Lead Belly</i> and <i>Olio</i>, which won the 2017 Pulitzer Prize, among other awards. He currently serves as a Professor of English at the College of Staten Island.</p>
+<p><a href="http://www.tyehimbajess.net/index.html">Tyehimba Jess</a> is an Alumnus of Cave Canem and NYU, working at the intersection of slam and academic poetry. His published books include <i>Lead Belly</i> and <i>Olio</i>, which won the 2017 Pulitzer Prize, among other awards. He currently serves as a Professor of English at the College of Staten Island.</p>
 <hr>
 <h3>More Information</h3>
 <b>Interviews:</b>
